force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Position__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Position__c</fullName>
    <description>Position of the attribute.</description>
    <inlineHelpText>Specify position of this attribute. Top renders above the options. Bottom renders below.</inlineHelpText>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Top</fullName><default>true</default><label>Top</label></value>
            <value><fullName>Bottom</fullName><default>false</default><label>Bottom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>