force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetField__c</fullName>
    <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
    <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Unit Price</fullName><default>false</default><label>Unit Price</label></value>
            <value><fullName>Discount (Amt)</fullName><default>false</default><label>Discount (Amt)</label></value>
            <value><fullName>Discount (%)</fullName><default>false</default><label>Discount (%)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>